--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +18,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
