--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -1,5 +1,6 @@
 name: mobile
 description: A new Flutter project.
+
 publish_to: 'none'
 version: 0.1.0
 
@@ -9,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^5.0.0
   http: ^0.13.3
 
 dev_dependencies:
