--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,1 @@
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.h2.console.enabled=true
-
-hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.profiles.active=prod
