--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -24,6 +24,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.mindrot:jbcrypt:0.4'
 	implementation 'com.h2database:h2'
 	implementation 'com.oracle.database.jdbc:ojdbc8'
 	compileOnly 'org.projectlombok:lombok'
