[PZGRAP-96] Dodałem catchowanie różnych wyjątków zamiast ifowania, naprawiłem błąd połączenia z bazą danych w utworzonych serwisach

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -4,4 +4,4 @@ spring.datasource.password=M4f!aP1u$
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.jpa.hibernate.ddl-auto=update
-hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+spring.jpa.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
