--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -4,4 +4,4 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 spring.h2.console.enabled=true
 
-hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
