--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   provider: ^6.1.1
   http: ^0.13.3
   web_socket_channel: ^2.1.0
+  stomp_dart_client: ^1.0.0
   fluttertoast: ^8.2.4
 
 dev_dependencies:
