--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,7 +1,8 @@
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:file:./db
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.h2.console.enabled=true
 
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
