--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.springframework:spring-messaging'
+	implementation 'org.springframework.security:spring-security-messaging'
 	implementation 'org.mindrot:jbcrypt:0.4'
 	implementation 'com.h2database:h2'
 	implementation 'com.oracle.database.jdbc:ojdbc8'
